Implement IDE suggestions, update API